--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div class="counter-number" id="js-counter">0</div>
         <button type="button" class="button js-button">-</button>
         <button type="button" class="button js-button">+</button>
-        <button type="button" class="button" id="js-reset-button">Reset</button>
+        <button type="button" class="reset-button active" id="js-reset-button">Reset</button>
+        <!-- <button type="button" class="reset-button none" id="js-reset-button">Reset</button> -->
     </div>
 
 <script src="./counter.js"></script>
