adjusted and finishesd

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <body>
     <div class="counter">
         <div class="counter-number" id="js-counter">0</div>
-        <button type="button" class="button js-button">-</button>
-        <button type="button" class="button js-button">+</button>
-        <button type="button" class="reset-button active" id="js-reset-button">Reset</button>
-        <!-- <button type="button" class="reset-button none" id="js-reset-button">Reset</button> -->
+            <button type="button" class="button">-</button>
+            <button type="button" class="button">+</button>
+        <button type="button" class="reset-button" id="js-reset-button">Reset</button>
     </div>
 
 <script src="./counter.js"></script>
